@@ -10,6 +10,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vpalias: wasn't allocating enough memory for alias name in
 	  valias_select_names (missing one byte for NULL).
 
+	Jianbin Xiao
+	- vmysql: reconnect to server if connection was dropped.
+
 	Tom Collins
 	- vpalias: Fix double-free in code ported from 5.5 branch.
 	- valias: exit non-zero on error, send all errors to stderr.
